--- a/mean-app/src/app/app.component.html
+++ b/mean-app/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main class="mt-2">
-  <app-post-create></app-post-create>
+  <app-post-create (postAddedEvent)="addedPost($event)"></app-post-create>
+  <app-post-list [posts]="AllPosts"></app-post-list>
 </main>
 <router-outlet></router-outlet>
