--- a/mean-app/src/app/login/login.component.scss
+++ b/mean-app/src/app/login/login.component.scss
@@ -1,3 +1,3 @@
 .bg-image {
-  background-image:url("../../assets/background.jpg") ;
+  background-image:url("https://raw.githubusercontent.com/akhilshaji86/MEAN/master/mean-app/src/assets/background.jpg") ;
 }
