implimented http interceptor

--- a/mean-app/src/app/pagenotfound/pagenotfound.component.html
+++ b/mean-app/src/app/pagenotfound/pagenotfound.component.html
@@ -1,1 +1,1 @@
-<img src="https://raw.githubusercontent.com/akhilshaji86/MEAN/master/mean-app/src/assets/404.jpg" alt="">
+<div class="w-100 h-100 bg-img"></div>
