--- a/mean-app/src/app/login/login-form/login-form.component.html
+++ b/mean-app/src/app/login/login-form/login-form.component.html
@@ -1,10 +1,10 @@
 <mat-card class="position-absolute">
   <mat-card-title> <i class="fas fa-sign-in-alt text-dark"> Login</i></mat-card-title>
   <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="submit()">
+    <form [formGroup]="form" (ngSubmit)="submit()" >
       <p>
         <mat-form-field>
-          <input type="text" matInput placeholder="Username" formControlName="username"/>
+          <input type="text" matInput placeholder="Username" required formControlName="username"/>
         </mat-form-field>
       </p>
 
@@ -19,7 +19,7 @@
       </p>
 
       <div class="button">
-        <button type="submit" mat-raised-button color="primary">Next</button>
+        <button type="submit" mat-raised-button color="primary" routerLink="../post">Next</button>
       </div>
 
     </form>
