--- a/mean-app/src/app/login/login.component.html
+++ b/mean-app/src/app/login/login.component.html
@@ -1,4 +1,4 @@
 <div class="h-100 w-100 bg-image position-relative">
-  <app-login-form></app-login-form>
+  <app-login-form #loginForm></app-login-form>
 
 </div>
